# waverast

./: .gitignore  Cargo.toml  LICENSE  README.md
waverast/: Cargo.toml
waverast-demo/: Cargo.toml
waverast-demo/src/: main.rs  render_svg.rs  svg_path.rs  viewer.rs
waverast/src/: compute_coeffs.wgsl  contour.rs  gpu.rs  lib.rs  rasterizer.rs  reference.rs  solver.rs  synthesize.wgsl  synthesize_f16.wgsl  synthesize_sparse_rgba.wgsl  synthesize_to_rgba.wgsl
